@@ -57,7 +57,7 @@ namespace lsp
                 void      **get_n(size_t idx, size_t size, void **dst);
 
                 void      **set(size_t n, void **src);
-                void      **iset(size_t idx, void **src, size_t n);
+                void      **iset(size_t idx, size_t n,  void **src);
                 void      **append(size_t n);
                 void      **append(void *ptr);
                 void      **append(size_t n, void **src);
@@ -193,7 +193,7 @@ namespace lsp
                     inline T **unshift(T *x)                                        { return pcast(v.insert(0, x));         }
                     inline T **prepend(T *x)                                        { return pcast(v.insert(0, x));         }
                     inline T **insert(size_t idx, T *x)                             { return pcast(v.insert(idx, x));       }
-                    inline T **set(size_t idx, T *x)                                { return pcast(v.iset(idx, reinterpret_cast<void **>(&x), 1));   }
+                    inline T **set(size_t idx, T *x)                                { return pcast(v.iset(idx, 1, vcast(&x)));     }
 
                     inline T **pop(T **x)                                           { return pcast(v.pop(vcast(x)));               }
                     inline T **shift(T **x)                                         { return pcast(v.iremove(0, 1, vcast(x)));     }
@@ -223,6 +223,7 @@ namespace lsp
                     inline T **unshift_n(size_t n, T **x)                           { return pcast(v.insert(0, n, vcast(x)));      }
                     inline T **prepend_n(size_t n, T **x)                           { return pcast(v.insert(0, n, vcast(x)));      }
                     inline T **insert_n(size_t idx, size_t n, T **x)                { return pcast(v.insert(idx, n, vcast(x)));    }
+                    inline T **set_n(size_t idx, size_t n, T **x)                   { return pcast(v.iset(idx, vcast(x), n));      }
 
                     inline T **pop_n(size_t n, T **x)                               { return pcast(v.pop(n, vcast(x)));            }
                     inline T **shift_n(size_t n, T **x)                             { return pcast(v.iremove(0, n, vcast(x)));     }
